# test-py

./: .gitignore  CONTINUE.md  README.md  STATUS.md  TASKS.txt  TEST_UX_UPDATE.md  pyproject.toml
code_ref/: rsb_test.sh  testsh
docs/: CODE_REFERENCES.md  rust_test_standardization_plan.md
docs/procs/: M2_REVIEW_REPORT.md  TASKS.txt  TASKS.txt.backup
docs/ref/: rsb_test_patterns_analysis.md  shell_architecture_comparison.md
docs/ref/legacy/: CHECKLIST_ORIG.md  HOWTO_HUB.md  HOWTO_UPDATE_RSB.md  RSB_ARCH.md  TEST_HARDENING_SUMMARY.md  TEST_ORGANIZATION.md
docs/ref/rsb/: INDEX.md
docs/ref/rsb/development/: MODULE_SPEC.md  PRELUDE_POLICY.md
docs/ref/rsb/misc/: BASHFX_TESTSH_PLAN.md  HOWTO.md
docs/ref/rsb/reference/: BASHFX-v3.md  REBEL.md  RSB_QUICK_REFERENCE.md  RSB_TEST_RUNNER.md
docs/rust/: RUST_BOXY_ROLO_USAGE.md  RUST_TESTING_HOWTO.md  RUST_TESTING_UX.md  RUST_TEST_CHECKLIST.md  RUST_TEST_ORGANIZATION.md
docs/rust/legacy/: HOWTO_TEST.md  RSB_TESTSH_INTEGRATION.md
src/testpy/: __init__.py  __main__.py  cli.py  config.py  discovery.py  output.py  repo.py  runner.py  validator.py
src/testrs/: __init__.py  __main__.py  cli.py  config.py  discovery.py  output.py  repo.py  runner.py  validator.py
