[project]
name = "testrs"
version = "0.1.0"
description = "Universal test orchestrator for multi-language projects (Rust, Python, Node.js, Shell)"
authors = [
    {name = "snekfx", email = "noreply@snekfx.dev"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["testing", "orchestration", "rust", "python", "nodejs", "shell", "rsb", "cargo", "pytest", "jest"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # TOML parsing (Python 3.11+ has tomllib built-in)
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
testrs = "testrs.cli:main"

[project.urls]
Homepage = "https://github.com/snekfx/test-py"
Repository = "https://github.com/snekfx/test-py"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
